--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -4,7 +4,7 @@ footer {
     width:100%;
 
     text-align: center;
-    font-size: 10 px;
+    font-size: 12px;
     letter-spacing: 0.2em;
     margin-bottom: 0.33%;
     //border: solid blue;
@@ -13,4 +13,10 @@ footer {
 a {
     color: black;
     text-decoration: none;
+}
+a:hover {
+    color: chartreuse;
+    font-weight: bold;
+    text-decoration: none;
+
 }
