Corrected footer to stay at the bottom

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -10,11 +10,11 @@ footer {
     //border: solid blue;
 }
 
-a {
+#footer-link {
     color: black;
     text-decoration: none;
 }
-a:hover {
+#footer-link:hover {
     color: chartreuse;
     font-weight: bold;
     text-decoration: none;
