--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,3 +1,12 @@
+html {
+    min-height: 100%;
+    position: relative;
+  }
+body {
+margin: 0;
+margin-bottom: 40px;
+}
+
 #link:hover {
     color: chartreuse;
 }
